AX: deferModalChange unnecessarily causes a children-changed, and changing aria-hidden unnecessarily resets m_modalNodesInitialized https://bugs.webkit.org/show_bug.cgi?id=285688 rdar://problem/142617733
Reviewed by Chris Fleizach.

AXObjectCache::deferModalChange started issuing a children-changed event in this commit:

https://github.com/WebKit/WebKit/commit/9b24060ac33142c1ba4a717e9661e04b5fa59bf4

Which fixed 7 tests in ITM. However, I don't think this behavior is correct. There is nothing about becoming a potential
modal node that affects any objects children. If the computed modal is changed, we will submit the appropriate children-changed
events, but in this spot we are just incurring unnecessary work.

This commit also removes unnecessary work done in AXObjectCache::handleAttributeChange where we would reset m_modalNodesInitialized
to false when aria-hidden changes when a modal is active. Resetting m_modalNodesInitialized to false causes findModalNodes()
to run, but this function doesn't consider aria-hidden in any way, so this behavior causes unnecessary work.

* LayoutTests/accessibility/mac/dynamic-modal-expected.txt:
* LayoutTests/accessibility/mac/dynamic-modal.html:
Simplify test.
* Source/WebCore/accessibility/AXObjectCache.cpp:
(WebCore::AXObjectCache::deferModalChange):
(WebCore::AXObjectCache::handleAttributeChange):
(WebCore::AXObjectCache::performDeferredCacheUpdate):

Canonical link: https://commits.webkit.org/288680@main

--- a/LayoutTests/accessibility/mac/dynamic-modal.html
+++ b/LayoutTests/accessibility/mac/dynamic-modal.html
@@ -5,17 +5,16 @@
 <script src="../../resources/js-test.js"></script>
 </head>
 <style>
-  *[role="dialog"] { border: 1px solid black; padding: 1em; margin: 1em; }
-  :focus { outline: 3px solid #ccf; outline-offset: 3px; }
+*[role="dialog"] { border: 1px solid black; padding: 1em; margin: 1em; }
+:focus { outline: 3px solid #ccf; outline-offset: 3px; }
 </style>
 <body>
 
-  <p>
+<p>
     <button id="show" autofocus>Show</button>
-  </p>
+</p>
 
-  <div id="wrapper">
-  </div>
+<div id="wrapper"></div>
 
 <script>
 document.getElementById("show").addEventListener("click", () => {
@@ -30,7 +29,7 @@ document.getElementById("show").addEventListener("click", () => {
     }, 0);
 });
 
-var testOutput = "This tests nested aria-modal dialogs\n\n";
+var output = "This tests nested aria-modal dialogs\n\n";
 
 if (window.accessibilityController) {
     window.jsTestIsAsync = true;
@@ -40,32 +39,17 @@ if (window.accessibilityController) {
             focus = accessibilityController.focusedElement;
             return focus && focus.domIdentifier;
         });
+        output += `Initial focus: ${focus.domIdentifier}\n`;
+        output += `Show button reachable: ${accessibilityController.accessibleElementById("show") != null}\n`;
 
-        focus = accessibilityController.focusedElement;
-        testOutput += `Initial focus: ${focus.domIdentifier}\n`;
-
-        show = accessibilityController.accessibleElementById("show");
-        testOutput += `Show button reachable: ${show != null}\n`;
-
-        testOutput += "\nClicking on show button\n\n";
+        output += "\nClicking on show button\n\n";
         document.getElementById("show").click();
 
-        await waitFor(() => {
-            focus = accessibilityController.focusedElement;
-            return focus.domIdentifier != "ok";
-        });
+        output += await expectAsync("accessibilityController.focusedElement?.domIdentifier === 'dialog_ok'", "true");
+        // The show button should be inaccessible.
+        output += await expectAsync("!!accessibilityController.accessibleElementById('show')", "false");
 
-        focus = accessibilityController.focusedElement;
-        testOutput += `New focus: ${focus.domIdentifier}\n`;
-
-        await waitFor(() => {
-            return !accessibilityController.accessibleElementById("show");
-        });
-
-        show = accessibilityController.accessibleElementById("show");
-        testOutput += `Show button reachable: ${show != null}\n`;
-
-        debug(testOutput);
+        debug(output);
         finishJSTest();
     });
 }
