HTML parser phone number handling should better account for MathML https://bugs.webkit.org/show_bug.cgi?id=284831 rdar://141632782
Reviewed by Chris Dumez.

When we are not in an HTML subtree it does not make sense to detect
phone numbers and insert HTML a start and end tag tokens when one is
found. It's especially dubious for MathML.

* LayoutTests/fast/dom/linkify-phone-numbers-expected.html:
* LayoutTests/fast/dom/linkify-phone-numbers.html:
* Source/WebCore/html/parser/HTMLTreeBuilder.cpp:
(WebCore::shouldParseTelephoneNumbersInNode):

Canonical link: https://commits.webkit.org/288706@main

--- a/LayoutTests/fast/dom/linkify-phone-numbers.html
+++ b/LayoutTests/fast/dom/linkify-phone-numbers.html
@@ -15,5 +15,6 @@ window.internals?.settings.setTelephoneNumberParsingEnabled(true);
 <pre>408 111 222</pre>
 <code>408 111 222</code>
 <div data-mime-type="text/latex">$\displaystyle \left(x + 1234567)\right$</div>
+<math><mfrac><mn>389.1067</mn> <mn>29.1067</mn></mfrac><mo>=</mo><mn>13.3683</mn></math>
 </body>
 </html>
