--- a/LayoutTests/fast/dom/linkify-phone-numbers-expected.html
+++ b/LayoutTests/fast/dom/linkify-phone-numbers-expected.html
@@ -12,5 +12,6 @@
 <pre>408 111 222</pre>
 <code>408 111 222</code>
 <div>$\displaystyle \left(x + 1234567)\right$</div>
+<math><mfrac><mn>389.1067</mn> <mn>29.1067</mn></mfrac><mo>=</mo><mn>13.3683</mn></math>
 </body>
 </html>
