Digital Credentials API: IdentityRequestProvider is now called DigitalCredentialRequest https://bugs.webkit.org/show_bug.cgi?id=279932 rdar://136714198
Reviewed by Abrar Rahman Protyasha and Alex Christensen.

Rename IdentityRequestProvider to DigitalCredentialRequest and related classes.
Also update the tests and the IDL file to use `.requests` instead of `.providers`.

See spec change:
https://github.com/WICG/digital-credentials/pull/165/

* LayoutTests/http/wpt/identity/identitycredentialscontainer-get-basics.https.html:
* LayoutTests/http/wpt/identity/identitycredentialscontainer-get-hidden.https.html:
* LayoutTests/http/wpt/identity/idl.https.html:
* LayoutTests/imported/w3c/web-platform-tests/digital-credentials/allow-attribute.https.html:
* LayoutTests/imported/w3c/web-platform-tests/digital-credentials/dc-types.ts:
* LayoutTests/imported/w3c/web-platform-tests/digital-credentials/disabled-by-permissions-policy.https.sub-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/digital-credentials/identity-get.tentative.https-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/digital-credentials/identity-get.tentative.https.html:
* LayoutTests/imported/w3c/web-platform-tests/digital-credentials/support/helper.js:
(export.makeGetOptions):
(makeDigitalCredentialRequest):
(makeIdentityRequestProvider): Deleted.
* LayoutTests/platform/ios/imported/w3c/web-platform-tests/digital-credentials/disabled-by-permissions-policy.https.sub-expected.txt:
* LayoutTests/platform/ios/imported/w3c/web-platform-tests/digital-credentials/identity-get.tentative.https-expected.txt:
* Source/WebCore/CMakeLists.txt:
* Source/WebCore/DerivedSources-input.xcfilelist:
* Source/WebCore/DerivedSources-output.xcfilelist:
* Source/WebCore/DerivedSources.make:
* Source/WebCore/Headers.cmake:
* Source/WebCore/Modules/identity/DigitalCredentialRequest.h: Renamed from Source/WebCore/Modules/identity/IdentityRequestProvider.h.
* Source/WebCore/Modules/identity/DigitalCredentialRequest

--- a/LayoutTests/http/wpt/identity/identitycredentialscontainer-get-hidden.https.html
+++ b/LayoutTests/http/wpt/identity/identitycredentialscontainer-get-hidden.https.html
@@ -38,7 +38,7 @@
 
         const p = navigator.identity.get({
             digital: {
-              providers: [],
+                requests: [],
             },
             mediation: "required",
         });
