--- a/LayoutTests/http/wpt/identity/identitycredentialscontainer-get-basics.https.html
+++ b/LayoutTests/http/wpt/identity/identitycredentialscontainer-get-basics.https.html
@@ -54,8 +54,8 @@
         await promise_rejects_js(
             t,
             TypeError,
-            navigator.identity.get({ digital: { providers: [] } }),
-            "navigator.identity.get() with an empty list of providers"
+            navigator.identity.get({ digital: { requests: [] } }),
+            "navigator.identity.get() with an empty list of requests"
         );
 
         await test_driver.bless();
@@ -63,7 +63,7 @@
             t,
             TypeError,
             navigator.identity.get({
-                digital: { providers: [{ protocol: "bogus protocol", request: {} }] },
+                digital: { requests: [{ protocol: "bogus protocol", request: {} }] },
             }),
             "navigator.identity.get() with a provider with unknown protocol"
         );
