--- a/LayoutTests/imported/w3c/web-platform-tests/digital-credentials/identity-get.tentative.https.html
+++ b/LayoutTests/imported/w3c/web-platform-tests/digital-credentials/identity-get.tentative.https.html
@@ -86,18 +86,18 @@
   }, "Calling navigator.identity.get() without an digital member same origin.");
 
   promise_test(async (t) => {
-    for (const provider of [undefined, []]) {
-      const options = makeGetOptions(provider);
+    for (const request of [undefined, []]) {
+      const options = makeGetOptions(request);
       await test_driver.bless("user activation");
       await promise_rejects_js(t, TypeError, navigator.identity.get(options));
     }
-  }, "navigator.identity.get() API rejects if there are no providers.");
+  }, "navigator.identity.get() API rejects if there are no requests.");
 
   promise_test(async (t) => {
     iframeSameOrigin.focus();
     const { contentWindow: iframeWindow } = iframeSameOrigin;
-    for (const provider of [undefined, []]) {
-      const options = makeGetOptions(provider);
+    for (const request of [undefined, []]) {
+      const options = makeGetOptions(request);
       await test_driver.bless("user activation");
       await promise_rejects_js(
         t,
@@ -105,19 +105,19 @@
         iframeWindow.navigator.identity.get(options)
       );
     }
-  }, "navigator.identity.get() API rejects if there are no providers for same-origin iframe.");
+  }, "navigator.identity.get() API rejects if there are no requests for same-origin iframe.");
 
   promise_test(async (t) => {
     iframeCrossOrigin.focus();
-    for (const provider of [undefined, []]) {
-      const options = makeGetOptions(provider);
+    for (const request of [undefined, []]) {
+      const options = makeGetOptions(request);
       const result = await sendMessage(iframeCrossOrigin, {
         action: "get",
         options,
       });
       assert_equals(result.constructor, "TypeError");
     }
-  }, "navigator.identity.get() API rejects if there are no providers in cross-origin iframe.");
+  }, "navigator.identity.get() API rejects if there are no requests in cross-origin iframe.");
 
   promise_test(async (t) => {
     const abortController = new AbortController();
