WebRTC AV1 decoder should be able to handle dynamic resolution increase rdar://142605002 https://bugs.webkit.org/show_bug.cgi?id=285681
Reviewed by Jean-Yves Avenard.

AV1 VTB decoder may be sent video frames of varying size through the WebRTC code path.
To properly handle this, we parse each encoded frame to get its input format.
If the input format is different from the current input format, we recreate the VTB session.

Covered by added test.

* LayoutTests/webrtc/video-av1-expected.txt:
* LayoutTests/webrtc/video-av1.html:
* Source/WebCore/platform/video-codecs/cocoa/RTCVideoDecoderVTBAV1.mm:
(-[RTCVideoDecoderVTBAV1 init]):
(-[RTCVideoDecoderVTBAV1 setWidth:height:]):
(-[RTCVideoDecoderVTBAV1 decodeData:size:timeStamp:]):

Canonical link: https://commits.webkit.org/288783@main

--- a/LayoutTests/webrtc/video-av1.html
+++ b/LayoutTests/webrtc/video-av1.html
@@ -122,6 +122,17 @@ promise_test((test) => {
     return checkVideoBlack(false, canvas2, video);
 }, "Track is enabled, video should not be black 2");
 
+promise_test((test) => {
+    return track.applyConstraints({ width:640, height:480 });
+}, "Track resolution increases");
+
+promise_test((test) => {
+    return waitForVideoSize(video, 640, 480, "increase of resolution should be fine");
+}, "Verify video element size changes");
+
+promise_test((test) => {
+    return testFrameDecodedIncreased(receivingConnection);
+}, "Verfiy video decoding continues");
         </script>
     </body>
 </html>
