--- a/LayoutTests/accessibility/mac/iframe-pdf.html
+++ b/LayoutTests/accessibility/mac/iframe-pdf.html
@@ -13,37 +13,23 @@
 <script>
     var testOutput = "This test ensures PDFs loaded in iframes are exposed in the accessibility tree.\n\n";
 
-    function traverseChildrenWithPath(startObject, traversalPath) {
-        if (!startObject)
-            return [];
-
-        let traversalString = "";
-        let currentObject = startObject;
-        for (let index of traversalPath) {
-            currentObject = currentObject.childAtIndex(index);
-            if (!currentObject)
-                return [];
-            traversalString += `At index ${index}, got ${currentObject.role}\n`;
-        }
-        return [traversalString, currentObject];
-    }
-
     if (window.accessibilityController) {
-        var textNode, traversalString;
+        var textNode, traversalString, pageObject;
         setTimeout(async function() {
             // This test is async because we may need to try the traversal a few times before the iframe
             // and the PDF inside the iframe are fully loaded.
             await waitFor(() => {
-                let container = accessibilityController.accessibleElementById("container");
-                [traversalString, textNode] = traverseChildrenWithPath(container, [0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0]);
+                pageObject = findFirstPageDescendant(accessibilityController.accessibleElementById("container"));
+                if (!pageObject)
+                    return false;
+
+                textNode = traverseChildrenToFirstStaticText(pageObject);
                 return textNode;
             });
-            testOutput += "Traversal path to text node inside PDF:\n\n";
-            testOutput += traversalString;
 
-            testOutput += "\nFound object:\n";
+            testOutput += "\nFound text object:\n";
             testOutput += `${textNode.role}\n`;
-            testOutput += `${textNode.stringValue.trimEnd()}\n`;
+            testOutput += `First word: ${textNode.stringValue.split(" ")[1]}`; // Get first word (omit 'AXValue')
 
             debug(testOutput);
             finishJSTest();
