--- a/LayoutTests/imported/w3c/web-platform-tests/html/dom/render-blocking/element-render-blocking-039.html
+++ b/LayoutTests/imported/w3c/web-platform-tests/html/dom/render-blocking/element-render-blocking-039.html
@@ -7,12 +7,11 @@
 
 <link rel=expect href="#invalid" blocking="render">
 <script>
-var timeoutHit = false;
-setTimeout(() => { timeoutHit = true; }, 3000);
+const startTime = performance.now();
 
 async_test((t) => {
   requestAnimationFrame(() => {
-    t.step(() => assert_false(timeoutHit, "requestAnimationFrame should not have been delayed by the link that didn't find its target"));
+    t.step(() => assert_less_than(performance.now() - startTime, 3000, "requestAnimationFrame should not have been delayed by the link that didn't find its target after load completes"));
     t.done();
   });
 }, "");
