9x fast/events/iOS/* are flaky timeouts on EWS https://bugs.webkit.org/show_bug.cgi?id=279704 rdar://136982012
Reviewed by Abrar Rahman Protyasha and Tim Horton.

9 layout tests are currently failing on iOS since the tests rely on key events
being received without an editable-element focused. The failures were caused by
collisions with UIKit's usage of `+isInHardwareKeyboardMode` as discussed in
https://commits.webkit.org/283793@main, which prevented the WebKit content view
from receiving key events. Each of these tests have been updated to set test
option 'useHardwareKeyboardMode' to true so that `+isInHardwareKeyboardMode`
returns YES, allowing the content view to once again receive the key events for
these tests. The TestExpectations have been updated accordingly.

* LayoutTests/fast/events/ios/key-events-comprehensive/key-events-meta-control.html:
* LayoutTests/fast/events/ios/key-events-comprehensive/key-events-meta-option.html:
* LayoutTests/fast/events/ios/key-events-comprehensive/key-events-meta-shift.html:
* LayoutTests/fast/events/ios/key-events-comprehensive/key-events-option-shift.html:
* LayoutTests/fast/events/ios/keyboard-scrolling-distance.html:
* LayoutTests/fast/events/ios/keydown-keyup-arrow-keys-in-non-editable-element.html:
* LayoutTests/fast/events/ios/keydown-keyup-in-non-editable-content.html:
* LayoutTests/fast/events/ios/keydown-keyup-special-keys-in-non-editable-element.html:
* LayoutTests/fast/events/ios/tab-cycle.html:
* LayoutTests/platform/ios/TestExpectations:

Canonical link: https://commits.webkit.org/288917@main

--- a/LayoutTests/fast/events/ios/key-events-comprehensive/key-events-meta-control.html
+++ b/LayoutTests/fast/events/ios/key-events-comprehensive/key-events-meta-control.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> <!-- webkit-test-runner [ useHardwareKeyboardMode=true ] -->
 <html>
 <head>
 <script src="../../../../resources/ui-helper.js"></script>
