--- a/LayoutTests/fast/events/ios/key-events-comprehensive/key-events-meta-option.html
+++ b/LayoutTests/fast/events/ios/key-events-comprehensive/key-events-meta-option.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> <!-- webkit-test-runner [ useHardwareKeyboardMode=true ] -->
 <html>
 <head>
 <script src="../../../../resources/ui-helper.js"></script>
