--- a/LayoutTests/accessibility/mac/details-summary.html
+++ b/LayoutTests/accessibility/mac/details-summary.html
@@ -24,88 +24,72 @@
 </div>
 
 <script>
-    var output = "This tests some basic attributes about the details element.\n";
+var output = "This tests some basic attributes about the details element.\n";
 
-    if (window.accessibilityController) {
-        window.jsTestIsAsync = true;
+if (window.accessibilityController) {
+    window.jsTestIsAsync = true;
 
-        var body = accessibilityController.rootElement.childAtIndex(0);
-        accessibilityController.addNotificationListener(function(element, notification) {
-            if (notification != "AXExpandedChanged")
-                return;
-            output += `Got AXExpandedChanged notification for ${element.domIdentifier}\n`;
+    var expandedChangedCount = 0;
+    var body = accessibilityController.rootElement.childAtIndex(0);
+    accessibilityController.addNotificationListener(function(element, notification) {
+        if (notification != "AXExpandedChanged")
+            return;
+        expandedChangedCount++;
+        output += `Got AXExpandedChanged notification for ${element.domIdentifier} (count ${expandedChangedCount})\n`;
+    });
+
+    var details1 = accessibilityController.accessibleElementById("details1");
+    var summary1 = accessibilityController.accessibleElementById("summary1");
+    output += expect("details1.role", "'AXRole: AXGroup'");
+    output += expect("details1.subrole", "'AXSubrole: AXDetails'");
+    output += expect("details1.isExpanded", "true");
+    output += expect("summary1.role", "'AXRole: AXDisclosureTriangle'");
+    output += expect("summary1.subrole", "'AXSubrole: AXSummary'");
+    output += expect("summary1.title", "'AXTitle: Some open info'");
+    output += expect("details1.isAttributeSettable('AXExpanded')", "true");
+
+    // Toggle the expanded state.
+    details1.setBoolAttributeValue("AXExpanded", false);
+    setTimeout(async function() {
+        await waitFor(() => {
+            details1 = accessibilityController.accessibleElementById("details1");
+            return details1 && !details1.isExpanded;
         });
+        summary1 = accessibilityController.accessibleElementById("summary1");
+        output += await expectAsync("details1.isExpanded", "false");
+        output += await expectAsync("summary1.isExpanded", "false");
 
-        var details1 = accessibilityController.accessibleElementById("details1");
-        var summary1 = accessibilityController.accessibleElementById("summary1");
-        output += expect("details1.role", "'AXRole: AXGroup'");
-        output += expect("details1.subrole", "'AXSubrole: AXDetails'");
-        output += expect("details1.isExpanded", "true");
-        output += expect("summary1.role", "'AXRole: AXDisclosureTriangle'");
-        output += expect("summary1.subrole", "'AXSubrole: AXSummary'");
-        output += expect("summary1.title", "'AXTitle: Some open info'");
-        output += expect("details1.isAttributeSettable('AXExpanded')", "true");
-
-        // Toggle the expanded state.
+        // Give it the same value to make sure we don't expand.
         details1.setBoolAttributeValue("AXExpanded", false);
+        output += await expectAsync("details1.isExpanded", "false");
+        output += await expectAsync("summary1.isExpanded", "false");
 
-        // After toggling the expanded state on a <details> element, the underlying HTMLDetailsElement goes away and it is replaced by a new object.
-        // Thus, we need to retrieve the corresponding accessible object again since the current one becomes defunct.
-        // See HTMLDetailsElement::toggleOpen().
-        setTimeout(async function() {
-            await waitFor(() => {
-                details1 = accessibilityController.accessibleElementById("details1");
-                return details1 && !details1.isExpanded;
-            });
-            summary1 = accessibilityController.accessibleElementById("summary1");
-            output += expect("details1.isExpanded", "false");
-            output += expect("summary1.isExpanded", "false");
+        // Set to expand again.
+        details1.setBoolAttributeValue("AXExpanded", true);
+        await waitFor(() => expandedChangedCount == 2);
+        output += await expectAsync("details1.isExpanded", "true");
+        output += await expectAsync("summary1.isExpanded", "true");
 
-            // Give it the same value to make sure we don't expand.
-            details1.setBoolAttributeValue("AXExpanded", false);
-            await waitFor(() => {
-                details1 = accessibilityController.accessibleElementById("details1");
-                return details1 && !details1.isExpanded;
-            });
-            summary1 = accessibilityController.accessibleElementById("summary1");
-            output += expect("details1.isExpanded", "false");
-            output += expect("summary1.isExpanded", "false");
+        // And duplicate the true state to make sure it doesn't toggle off.
+        details1.setBoolAttributeValue("AXExpanded", true);
+        output += await expectAsync("details1.isExpanded", "true");
+        output += await expectAsync("summary1.isExpanded", "true");
 
-            // Set to expand again.
-            details1.setBoolAttributeValue("AXExpanded", true);
-            await waitFor(() => {
-                details1 = accessibilityController.accessibleElementById("details1");
-                return details1 && details1.isExpanded;
-            });
-            summary1 = accessibilityController.accessibleElementById("summary1");
-            output += expect("details1.isExpanded", "true");
-            output += expect("summary1.isExpanded", "true");
+        details2 = accessibilityController.accessibleElementById("details2");
+        output += expect("details2.subrole", "'AXSubrole: AXDetails'");
+        output += expect("details2.isExpanded", "false");
 
-            // And duplicate the true state to make sure it doesn't toggle off.
-            details1.setBoolAttributeValue("AXExpanded", true);
-            await waitFor(() => {
-                details1 = accessibilityController.accessibleElementById("details1");
-                return details1 && details1.isExpanded;
-            });
-            summary1 = accessibilityController.accessibleElementById("summary1");
-            output += expect("details1.isExpanded", "true");
-            output += expect("summary1.isExpanded", "true");
+        // Expanded status should be correct when detail has group role
+        details3 = accessibilityController.accessibleElementById("details3");
+        output += expect("details3.subrole", "'AXSubrole: AXApplicationGroup'");
+        output += expect("details3.isExpanded", "true");
 
-            details2 = accessibilityController.accessibleElementById("details2");
-            output += expect("details2.subrole", "'AXSubrole: AXDetails'");
-            output += expect("details2.isExpanded", "false");
-
-            // Expanded status should be correct when detail has group role
-            details3 = accessibilityController.accessibleElementById("details3");
-            output += expect("details3.subrole", "'AXSubrole: AXApplicationGroup'");
-            output += expect("details3.isExpanded", "true");
-
-            debug(output);
-            accessibilityController.removeNotificationListener();
-            document.getElementById("content").style.visibility = "hidden";
-            finishJSTest();
-        }, 0);
-    }
+        debug(output);
+        accessibilityController.removeNotificationListener();
+        document.getElementById("content").style.visibility = "hidden";
+        finishJSTest();
+    }, 0);
+}
 </script>
 </body>
 </html>
