Document Leak Occurs when opening Context Menu https://bugs.webkit.org/show_bug.cgi?id=284189 rdar://137308000
Reviewed by Wenson Hsieh.
When a context click occurs, the ContextMenu is created.
The Page currently owns the ContextMenuController, which owns the
ContextMenu. The context menu's context strongly holds onto the event
target of the context click, as well as HitTestResults which hold
Refs to Nodes.
The document that the context click occured
on can't be destructed because of this strong reference to the Node that
is held by the context menu's context. Because a new context object
is already being created for every new context click, ensure that we
destroy the held context when dismissing the context menu so that
the Page does not indirectly hold onto a node during document
destruction.

* LayoutTests/editing/mac/spelling/disable-automatic-spelling-correction-context-menu-item-does-not-leak-expected.txt: Added.
* LayoutTests/editing/mac/spelling/disable-automatic-spelling-correction-context-menu-item-does-not-leak.html: Added.
* LayoutTests/editing/mac/spelling/disable-automatic-spelling-correction-context-menu-item.html:
* LayoutTests/platform/mac-wk1/TestExpectations:
* LayoutTests/resources/document-leak-test.js:
(async runDocumentLeakTestSynchronously):
(cleanIframeUponMessageReceived):
* Source/WebCore/page/ContextMenuController.cpp:
(WebCore::ContextMenuController::didDismissContextMenu):
* Source/WebCore/page/ContextMenuController.h:
(WebCore::ContextMenuController::setContextMenuContext): Deleted.
* Source/WebCore/testing/Internals.cpp:
(WebCore::Internals::resetToConsistentState):
* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::didDismissContextMenu):

Canonical link: https://commits.webkit.org/288976@main

--- a/LayoutTests/editing/mac/spelling/disable-automatic-spelling-correction-context-menu-item.html
+++ b/LayoutTests/editing/mac/spelling/disable-automatic-spelling-correction-context-menu-item.html
@@ -6,18 +6,24 @@
 <body>
     <div><input id="top" autocorrect="off"></input></div>
     <div><input id="bottom"></input></div>
-</body>
 <p id="description"></p>
 <p id="console"></p>
 </body>
 <script>
 function isSpellingCorrectionMenuItemEnabled(element)
 {
+    if (window.frameElement)
+        window.frameElement.scrollIntoView(true);
+
     const elementRect = element.getBoundingClientRect();
     eventSender.mouseMoveTo(elementRect.left + elementRect.width / 2, elementRect.top + elementRect.height / 2);
 
     const spellingMenuItem = eventSender.contextClick().find(item => item.title === "Spelling and Grammar");
-    return spellingMenuItem.children.find(item => item.title === "Correct Spelling Automatically").enabled;
+    var isFound = spellingMenuItem.children.find(item => item.title === "Correct Spelling Automatically").enabled;
+    // open the context menu through the UI process
+    eventSender.mouseDown(2);
+    eventSender.mouseUp(2);
+    return isFound;
 }
 
 description("Verifies that autocorrect='off' disables the 'Correct Spelling Automatically' context menu item on macOS. To manually test, check that the menu item is disabled when right clicking the top text field, but enabled when clicking the bottom text field.");
@@ -28,6 +34,11 @@ bottomInput = document.getElementById("bottom");
 if (window.eventSender) {
     shouldBeFalse("isSpellingCorrectionMenuItemEnabled(topInput)");
     shouldBeTrue("isSpellingCorrectionMenuItemEnabled(bottomInput)");
+    // remove focus from the input element by clicking somewhere else or this document won't be gc'able on an iframe-based document leak test
+    eventSender.mouseMoveTo(0, 0);
+    eventSender.mouseDown();
 }
+
+onload = () => parent.postMessage("iframe loaded");
 </script>
 </html>
